Change history for demjson python module.

Version 1.7 released 2014-04-13

 * RFC 7159 support. The new RFC, wich superseded RFC 4627, relaxes
   the constraint that a JSON document must start with an object or
   array.  Now any JSON value type is a legal JSON document.

 * The "jsonlint" script command will now be installed by default.

 * jsonlint improvements:
       - Fixed reading from stdin
       - New -o option to specify output filename
       - Verbosity on by default, new --quiet option
       - Better help text

Version 1.6 released 2011-04-01

 * Bug fix. The jsonlint tool failed to accept a JSON document from
   standard input (stdin).  Also added a --version and --copyright
   option support to jsonlint.  Thanks to Brian Bloniarz for reporting
   this bug.

 * No changes to the core demjson library/module was made, other
   than a version number bump.

Version 1.5 released 2010-10-10

 * Bug fix. When encoding Python strings to JSON, occurances of
   character U+00FF (ASCII 255 or 0xFF) may result in an error.
   Thanks to Tom Kho and Yanxin Shi for reporting this bug.

Version 1.4 released 2008-12-17

 * Changed license to LGPL 3 (GNU Lesser General Public License) or
   later.  Older versions still retain their original licenses.

 * No changes other than relicensing were made.

Version 1.3 released 2008-03-19

 * Change the default value of escape_unicode to False rather than
   True.

 * Parsing JSON strings was not strict enough.  Prohibit multi-line
   string literals in strict mode.  Also prohibit control characters
   U+0000 through U+001F inside string literals unless they are
   \u-escaped.

 * When in non-strict mode where object keys may be JavaScript
   identifiers, allow those identifiers to contain '$' and '_'.  Also
   introduce a method, decode_javascript_identifier(), which converts
   a JavaScript identifier into a Python string type, or can be
   overridden by a subclass to do something different.
